<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Resumen"
        android:background="@color/colorPrimary"
        android:id="@+id/resumenRoot">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardResizable"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="1dp"
                    app:cardElevation="2dp"
                    app:cardBackgroundColor="@color/colorCard2">

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/resumen_pedido_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:id="@+id/textView3"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textSize="18sp"
                            android:background="@color/colorPrimaryDark"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:padding="10dp"/>
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/bacon_burguer"
                            android:id="@+id/imagenTopResumen"
                            android:scaleType="centerCrop"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3"
                            android:contentDescription="imagen de la hamburguesa del pedido"/>
                    <TextView
                            android:text="@string/burger_name_label_resumen_pedido"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/resumenBurgerName"
                            app:layout_constraintTop_toBottomOf="@+id/imagenTopResumen"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textAlignment="textStart"/>
                    <View
                            android:id="@+id/divider2"
                            android:layout_width="0dp"
                            android:layout_height="10dp"
                            android:background="@color/colorPrimaryDark"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/resumenBurgerName"
                            android:layout_marginTop="16dp"/>
                    <TextView
                            android:text="@string/acompa_amiento_label_pedido"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/resumenAcompañamiento"
                            app:layout_constraintTop_toBottomOf="@+id/divider2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:textAlignment="textStart"/>
                    <View
                            android:id="@+id/divider3"
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            android:background="@color/colorPrimaryDark"
                            app:layout_constraintTop_toBottomOf="@+id/resumenAcompañamiento"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                    <TextView
                            android:text="@string/extras_label_resumen_pedido"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/resumenExtras"
                            android:layout_marginTop="16dp"
                            app:layout_constraintTop_toBottomOf="@+id/divider3"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:textAlignment="textStart"
                            android:textColor="@color/colorPrimaryDark"/>
                    <View
                            android:id="@+id/divider4"
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            android:background="@color/colorPrimaryDark"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/resumenExtras"
                            android:layout_marginTop="16dp"/>
                    <TextView
                            android:text="@string/direccion_label_resumen_pedido"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/resumenDireccion"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            android:layout_marginStart="16dp"
                            app:layout_constraintTop_toTopOf="@+id/imageView4"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                            app:layout_constraintHorizontal_bias="0.0"
                            android:layout_marginEnd="16dp"
                            android:textColor="@color/colorPrimaryDark"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/location_light_36"
                            android:id="@+id/imageView4"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="12dp"
                            android:tint="@color/colorPrimaryDark"
                            app:layout_constraintTop_toBottomOf="@+id/divider4"
                            android:layout_marginTop="16dp"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/phone_light_36"
                            android:id="@+id/imageView6"
                            android:tint="@color/colorPrimaryDark"
                            android:layout_marginTop="16dp"
                            app:layout_constraintTop_toBottomOf="@+id/imageView4"
                            android:layout_marginStart="12dp"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                            android:text="@string/telefono_label_resumen_pedido"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                            android:id="@+id/resumenTelefono"
                            app:layout_constraintTop_toTopOf="@+id/imageView6"
                            app:layout_constraintStart_toEndOf="@+id/imageView6"
                            android:layout_marginStart="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintHorizontal_bias="0.0"
                            android:textColor="@color/colorPrimaryDark"/>
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            app:layout_constraintTop_toBottomOf="@+id/imageView6"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="16dp"
                            android:background="@color/colorPrimaryDark">

                        <TextView
                                android:text="@string/precio_total_label_resumen_pedido"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                                android:id="@+id/resumenPrecio"
                                android:textAlignment="textStart"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:textColor="@color/colorPrimary"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:textSize="18sp"
                                android:gravity="center"
                                android:padding="0dp"/>
                    </android.support.constraint.ConstraintLayout>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
            <Button
                    android:text="@string/confirmar_button_resumen_pedido"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    app:layout_constraintTop_toBottomOf="@+id/cardResizable"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/Widget.AppCompat.Button"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:elevation="0dp"
                    android:onClick="submitButton"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>